insert and searh methods implemented partially

--- a/C6XSDH_HW2/C6XSDH_HW2.vcxproj
+++ b/C6XSDH_HW2/C6XSDH_HW2.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Trie.cpp" />
+    <ClCompile Include="TrieNode.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Trie.h" />
