--- a/C6XSDH_HW2/C6XSDH_HW2.vcxproj.filters
+++ b/C6XSDH_HW2/C6XSDH_HW2.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Trie.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TrieNode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TrieNode.h">
