readFromFile works for wordsEn, plus a minimal user greeting added

--- a/C6XSDH_HW2/C6XSDH_HW2.vcxproj
+++ b/C6XSDH_HW2/C6XSDH_HW2.vcxproj
@@ -135,6 +135,9 @@
     <ClInclude Include="Trie.h" />
     <ClInclude Include="TrieNode.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="wordsEn.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
