--- a/C6XSDH_HW2/C6XSDH_HW2.vcxproj.filters
+++ b/C6XSDH_HW2/C6XSDH_HW2.vcxproj.filters
@@ -33,4 +33,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="wordsEn.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
